Add all changes

--- a/app/core/src/main/resources/messages_en_US.properties
+++ b/app/core/src/main/resources/messages_en_US.properties
@@ -487,6 +487,24 @@ adminUserSettings.teamChanged=User's team was updated
 adminUserSettings.teamHidden=Hidden
 adminUserSettings.totalMembers=Total Members
 adminUserSettings.confirmDeleteTeam=Are you sure you want to delete this team?
+adminUserSettings.loading=Loading...
+adminUserSettings.error=Unable to load data
+adminUserSettings.licenseStatus=License Status
+adminUserSettings.usageMetrics=Usage Metrics
+adminUserSettings.license.plan=Plan
+adminUserSettings.license.verification=Verification
+adminUserSettings.license.users=Licensed Users
+adminUserSettings.license.features=Enabled Features
+adminUserSettings.license.expires=Expires
+adminUserSettings.license.unverified=Awaiting verification
+adminUserSettings.license.verified=Verified
+adminUserSettings.license.unconfigured=Community (not configured)
+adminUserSettings.license.none=No premium features enabled yet
+adminUserSettings.usage.totalOperations=Total Operations
+adminUserSettings.usage.totalFiles=Files Processed
+adminUserSettings.usage.generated=Snapshot Generated
+adminUserSettings.usage.topOperations=Top Operations
+adminUserSettings.usage.none=No activity recorded yet
 
 teamCreated=Team created successfully
 teamExists=A team with that name already exists
